Style changes, Mathjax, and added sponsors

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,9 +12,12 @@
 
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == '/' %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
-      <a class="sidebar-nav-item" href="{{ site.baseurl }}/#program">Program</a>
-      <a class="sidebar-nav-item" href="{{ site.baseurl }}/#location">Practical information {{page.hash}}</a>
-
+      <div class="sidebar-nav-hashes">
+	<a class="sidebar-nav-item" href="{{ site.baseurl }}/#program">Program</a>
+	<a class="sidebar-nav-item" href="{{ site.baseurl }}/#location">Practical information</a>
+	<a class="sidebar-nav-item" href="{{ site.baseurl }}/#sponsors">Sponsors</a>
+      </div>
+      
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
         `layout: page` in the front-matter. See readme for usage.
