--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-        <a href="{{ site.baseurl }}/">
+        <a href="./">
           {{ site.title }}
         </a>
       </h1>
@@ -11,11 +11,11 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == '/' %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
+      <a class="sidebar-nav-item{% if page.url == '/' %} active{% endif %}" href="./">Home</a>
       <div class="sidebar-nav-hashes">
-	<a class="sidebar-nav-item" href="{{ site.baseurl }}/#program">Program</a>
-	<a class="sidebar-nav-item" href="{{ site.baseurl }}/#location">Practical information</a>
-	<a class="sidebar-nav-item" href="{{ site.baseurl }}/#sponsors">Sponsors</a>
+	<a class="sidebar-nav-item" href="#program">Program</a>
+	<a class="sidebar-nav-item" href="#location">Practical information</a>
+	<a class="sidebar-nav-item" href="#sponsors">Sponsors</a>
       </div>
       
       {% comment %}
@@ -27,7 +27,7 @@
       {% for node in pages_list %}
         {% if node.title != null %}
           {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>
+            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href=".{{ node.url }}">{{ node.title }}</a>
           {% endif %}
         {% endif %}
       {% endfor %}
