--- a/public/css/slides.scss
+++ b/public/css/slides.scss
@@ -6,7 +6,7 @@
 $theme: rgb(46,131,200);
 
 .remark-container {
-    background: $theme + rgb(30,30,30);
+    background-color: $theme + rgb(30,30,30);
 }
 
 a {
